# plate-tectonics

./: .clang-format  .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  README.md  build_commands.txt  changelog.txt  run_linter.sh  vcpkg.json
.github/workflows/: push.yml
build-png/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PlateTectonics.slnx  PlateTectonics.vcxproj  PlateTectonics.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-png/PlateTectonics.dir/Release/: PlateTectonics.lib.recipe
build-png/PlateTectonics.dir/Release/PlateTectonics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PlateTectonics.lastbuildstate
build-png/Testing/Temporary/: CTestCostData.txt
build-png/examples/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PlateTectonicsExamples.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  simulation.vcxproj  simulation.vcxproj.filters
build-png/examples/simulation.dir/Release/: simulation.exe.recipe
build-png/examples/simulation.dir/Release/simulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  simulation.lastbuildstate
build-png/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PlateTectonicsTests.slnx  PlateTectonicsTests.vcxproj  PlateTectonicsTests.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-png/test/PlateTectonicsTests.dir/Release/: PlateTectonicsTests.exe.recipe
build-png/test/PlateTectonicsTests.dir/Release/PlateTec.D1CA2E88.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  PlateTectonicsTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-png/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-png/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
examples/: CMakeLists.txt  map_drawing.cpp  map_drawing.hpp  simulation.cpp
pybindings/: README.md
pybindings/platec_src/: platecmodule.cpp
src/: bounds.hpp  geometry.cpp  geometry.hpp  heightmap.hpp  lithosphere.cpp  lithosphere.hpp  mass.hpp  movement.cpp  movement.hpp  noise.cpp  plate.cpp  plate.hpp  plate_functions.hpp  platecapi.cpp  platecapi.hpp  rectangle.hpp  segment_creator.cpp  segment_creator.hpp  segment_data.hpp  segments.hpp  simplerandom.cpp  simplerandom.hpp  simplexnoise.cpp  topography_codec.cpp  topography_codec.hpp  utils.hpp
test/: CMakeLists.txt  test_input_heightmap.cpp  test_regression.cpp  test_topography_io.cpp
tests/: CMakeLists.txt  test_movement.cpp  test_plate.cpp  test_regression.cpp  test_topography_codec.cpp  test_topography_io.cpp
tools/: CMakeLists.txt  heightmap_io.cpp  heightmap_io.hpp  simulation.cpp
